@@ -7,6 +7,20 @@ Extensions
 WTForms ships with a number of extensions that make it easier to work with
 other frameworks and libraries, such as Django.
 
+Dateutil
+--------
+.. module:: wtforms.ext.dateutil.fields
+
+For better date-time parsing using the `python-dateutil`_  package,
+:mod:`wtforms.ext.dateutil` provides a set of fields to use to accept a wider
+range of date input. 
+
+.. _python-dateutil: http://labix.org/python-dateutil
+
+.. autoclass:: DateTimeField(default field arguments, parse_kwargs=None, display_format='%Y-%m-%d %H:%M')
+
+.. autoclass:: DateField(default field arguments, parse_kwargs=None, display_format='%Y-%m-%d')
+
 Django
 ------
 .. module:: wtforms.ext.django
